# mlFace

./: CHECKLIST.md  GIT_SETUP.md  MCP-BRIDGE-README.md  index.html  make-executable.sh  mcp-bridge-advanced.js  mcp-bridge-minimal.js  mcp-bridge-package.json  mcp-bridge.js  package.json  pnpm-lock.yaml  start-bridge.sh  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/mcp/: client.rs  commands.rs  mod.rs  server.rs  transport.rs  types.rs
src/components/: brand.tsx
src/components/chat/: chat-history.tsx  chat-input.tsx  chat-window.tsx  message-bubble.tsx  typing-indicator.tsx
src/components/layout/: main-layout.tsx
src/components/mcp/: api.ts  index.ts  mcp-chat-panel.tsx  mcp-manager.tsx  mcp-resources.tsx  mcp-settings.tsx  mcp-tools.tsx  types.ts
src/components/settings/: settings-dialog.tsx
src/components/sidebar/: chat-list.tsx  model-selector.tsx  sidebar.tsx
src/components/theme/: theme-provider.tsx
src/components/ui/: button.tsx  input.tsx  textarea.tsx
src/lib/: model-selection.ts  utils.ts  vite-mcp-plugin.js
src/lib/chat/: generate-title.ts
src/services/: api.ts  mcp-adapter.ts  mcp-client.ts  mcp.ts
src/store/: useStore.ts
src/types/: index.ts
